--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,17 +4,19 @@ site_url: https://remkohdev.github.io/workshop-setup
 site_author: IBM Developer
 
 # Repository
-repo_name: workshop-setup
-repo_url: https://github.com/remkohdev/workshop-setup
+repo_name: maquina-vending
+repo_url: https://github.com/IBM/maquina-vending
 edit_uri: edit/master/docs
 
 # Navigation
 nav:
   - Welcome:
-    - About the workshop: README.md
+    - Acerca del workshop: docs/README.md
   - Workshop:
-    - Lab 0. Pre-work: pre-work/README.md
-    - Lab 1. Some Title: lab-1/README.md
+    - Trabajo previo: docs/pre-work/README.md
+    - Parte 1: Crear una instancia del servicio Watson Assistant Service en IBM Cloud: docs/lab-1/README.md
+    - Parte 2: Importar el dialog-skill: docs/lab-2/README.md
+    - Parte 3: Iniciar el chatbot y obtener el código para la vending-machine: docs/lab-3/README.md
   - References:
     - Additional Resources: resources/RESOURCES.md
     - Contributors: resources/CONTRIBUTORS.md
