--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: Workshop Setup
-site_url: https://remkohdev.github.io/workshop-setup
+site_url: https://ibm.github.io/maquina-vending/
 site_author: IBM Developer
 
 # Repository
