--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,8 +17,8 @@ nav:
     - Lab 0. Pre-work: pre-work/README.md
     - Lab 1. Crea una instacia del servicio Watson Assitant: lab-1/README.md
     - Lab 2. Importa el dialog-skill: lab-2/README.md
-    - Lab 3. Configura el diálogo: lab-3/README.md
-    - Lab 4. Inicia el chatbot y obtén tu código para la máquina expendedora: lab-1/README.md
+    - Lab 3. Configura el diálogo para: lab-3/README.md
+    - Lab 4. Inicia el chatbot y obtén tu código para la máquina expendedora: lab-4/README.md
   - References:
     - Additional Resources: resources/RESOURCES.md
     - Contributors: resources/CONTRIBUTORS.md
