--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,24 +1,20 @@
 # Project information
-site_name: Instrucciones máquina expendedora
+site_name: Workshop Setup
 site_url: https://ibm.github.io/maquina-vending/
 site_author: IBM Developer
 
 # Repository
-repo_name: maquina-vending
+repo_name: workshop-setup
 repo_url: https://github.com/IBM/maquina-vending
 edit_uri: edit/master/docs
 
-
 # Navigation
 nav:
-  - Bienvenido:
-    - Sobre el workshop: README.md
+  - Welcome:
+    - About the workshop: README.md
   - Workshop:
     - Lab 0. Pre-work: pre-work/README.md
-    - Lab 1. Crea una instacia del servicio Watson Assitant: lab-1/README.md
-    - Lab 2. Importa el dialog-skill: lab-2/README.md
-    - Lab 3. Configura el diálogo para que el asistente funcione correctamente: lab-3/README.md
-    - Lab 4. Inicia el chatbot y obtén tu código para la máquina expendedora: lab-4/README.md
+    - Lab 1. Some Title: lab-1/README.md
   - References:
     - Additional Resources: resources/RESOURCES.md
     - Contributors: resources/CONTRIBUTORS.md
