--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,11 +19,9 @@ nav:
     - Lab 2. Importa el dialog-skill: lab-2/README.md
     - Lab 3. Configura el diálogo para que el asistente funcione correctamente: lab-3/README.md
     - Lab 4. Inicia el chatbot y obtén tu código para la máquina expendedora: lab-4/README.md
-  - References:
-    - Additional Resources: resources/RESOURCES.md
-    - Contributors: resources/CONTRIBUTORS.md
-    - MkDocs Cheatsheet: resources/MKDOCS.md
-    - Admin Guide: resources/ADMIN.md
+  - Referencias:
+    - Recursos adicionales: resources/RESOURCES.md
+    - Participantes: resources/CONTRIBUTORS.md
 
 ## DO NOT CHANGE BELOW THIS LINE
 
