--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
     - Lab 4. Inicia el chatbot y obtén tu código para la máquina expendedora: lab-4/README.md
   - Referencias:
     - Recursos adicionales: resources/RESOURCES.md
-    - Participantes: resources/CONTRIBUTORS.md
+    - Autores: resources/CONTRIBUTORS.md
 
 ## DO NOT CHANGE BELOW THIS LINE
 
